# memflowup

./: .gitignore  Cargo.toml  LICENSE  README.md  default_verifying_key.pem  flake.nix  index.json  memflow-coredump.rhai  memflow-pcileech.rhai  memflowup.py  standard.rhai  target_rename.sh
.github/workflows/: build.yml
src/: build_mode.rs  database.rs  ensure_rust.rs  error.rs  github_api.rs  main.rs  oneshot.rs  package.rs  registry.rs  setup_mode.rs  util.rs
src/commands/: build.rs  config.rs  mod.rs  plugins.rs  pull.rs  push.rs  registry.rs
src/scripting/: mod.rs
