[package]
name = "memflowup"
version = "0.2.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
edition = "2021"
description = "setup tool for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflowup"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflowup"
license-file = "LICENSE"
keywords = [ "memflow", "introspection", "memflowup", "memory", "dma" ]
categories = [ "memory-management", "os" ]

[dependencies]
log = "^0.4.14"
simplelog = "^0.12.0"
rhai = "^1.6"
clap = { version = "^4.0.11", features = ["cargo"] }
inquire = "0.7"

# scripts
which = "4.0.2"
ureq = "^2.4"
pbr = "1.0"
progress-streams = "1.1"
dirs = "^4.0"
zip = "^0.6"
crc = "^3.0"

# memflowup 0.2
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
bytes = "1.6"
chrono = "0.4"

# update check
crates_io_api = { version = "0.9.0", default-features = false, features = ["rustls"] }

# memflow-registry
memflow-registry-client = { path = "../memflow-registry/memflow-registry-client" }
sha256 = "1.5"

# download progress
futures-util = "0.3"
indicatif = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
