[package]
name = "memflowup"
version = "0.2.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
edition = "2021"
description = "setup tool for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflowup"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflowup"
license-file = "LICENSE"
keywords = [ "memflow", "introspection", "memflowup", "memory", "dma" ]
categories = [ "memory-management", "os" ]

[dependencies]
# general dependencies
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
clap = { version = "4.5", features = ["cargo"] }
console = "0.15"
inquire = "0.7"

# async runtime
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
bytes = "1.6"

# serializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# memflowup dirs
dirs = "5.0"

# ensure_rust checks
which = "6.0"

# update check
crates_io_api = { version = "0.9.0", default-features = false, features = ["rustls"] }

# memflow-registry
#memflow-registry-client = { path = "../memflow-registry/memflow-registry-client" }
memflow-registry-client = { git = "https://github.com/memflow/memflow-registry" }
sha256 = "1.5"

# source builds
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# download progress
futures-util = "0.3"
indicatif = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
# root check
libc = "0.2"
